add description for services

--- a/notes/BASE.ipynb
+++ b/notes/BASE.ipynb
@@ -7,6 +7,19 @@
     "editable": true
    },
    "source": [
+    "# lending関係サービスのweb APIの試用\n",
+    "\n",
+    "以下のサービスを試す。\n",
+    "\n",
+    "| サービス名 | 状況 | \n",
+    "| --- | --- |\n",
+    "| BASE | 審査待ち |\n",
+    "| マネーフォワード | 法人向けはまだAPIを公開してないため、後回し |\n",
+    "| SBIネット銀行 | 口座開設待ち |\n",
+    "| freee | OAuth2.0のやり取りにあたって、手元にwebサーバーが必要？らしく実験中 |\n",
+    "| zaim | 未 |\n",
+    "\n",
+    "\n",
     "## [BASEのWeb API](https://github.com/baseinc/api-docs)の試用\n",
     "\n",
     "アクセストークン取得のため、[こちらから](https://developers.thebase.in/)あらかじめ申請をする必要がある。\n",
